--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "sudo systemctl start mongod",
     "start": "node index.js"
   },
   "author": "Charles Gong",
@@ -12,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "mongodb": "^3.5.9",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   }
