--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "sudo systemctl start mongod",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:db": "sudo systemctl start mongod"
   },
   "author": "Charles Gong",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.9.19",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   }
