--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "start:db": "sudo systemctl start mongod",
+    "start:db:mac": "mongod --dbpath=/Users/charles/Documents/workspace/skydragon/lounge/lounge.server/data/db",
     "ports": "netstat -tulpn"
   },
   "author": "Charles Gong",
