--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "SERVER_ENV=dev nodemon index.js",
+    "start:prod": "SERVER_ENV=prod nodemon index.js",
     "db": "sudo systemctl start mongod",
     "db:mac": "mongod --dbpath=/Users/charles/Documents/workspace/skydragon/lounge/lounge.server/data/db",
     "ports": "netstat -tulpn"
@@ -14,12 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.15",
-    "mongodb": "^3.5.9",
-    "mongoose": "^5.9.19",
-    "socket.io": "^2.3.0",
-    "uuid": "^8.1.0"
+    "lodash": "^4.17.20",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.10.14",
+    "socket.io": "^3.0.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
