--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:prod": "SERVER_ENV=prod nodemon index.js",
     "db": "sudo systemctl start mongod",
     "db:mac": "mongod --dbpath=/Users/charles/Documents/workspace/skydragon/lounge/lounge.server/data/db",
-    "ports": "netstat -tulpn"
+    "ports": "netstat -tulpn",
+    "deploy": "./deploy.sh"
   },
   "author": "Charles Gong",
   "license": "ISC",
