--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db": "sudo systemctl start mongod",
     "db:mac": "mongod --dbpath=/Users/charles/Documents/workspace/skydragon/lounge/lounge.server/data/db",
     "ports": "netstat -tulpn",
+    "ports:mac": "sudo lsof -PiTCP -sTCP:LISTEN",
     "deploy": "./scripts/deploy.sh"
   },
   "author": "Charles Gong",
